[gd_scene load_steps=3 format=3 uid="uid://cpg2xebaf6ybb"]

[ext_resource type="Script" path="res://Scenes/mini_map.gd" id="1_mtimf"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7b5y6"]

[node name="Mini_Map" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mtimf")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.0627451, 0.0627451, 0.0627451, 0.431373)
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("CanvasTexture_7b5y6")

[node name="Control" type="Control" parent="Background"]
layout_mode = 1
anchors_preset = 0
offset_left = 118.0
offset_top = 50.0
offset_right = 158.0
offset_bottom = 90.0
scale = Vector2(1.5, 1.5)

[node name="Mess_Hall" type="ColorRect" parent="Background/Control"]
layout_mode = 0
offset_left = 121.2
offset_top = 443.2
offset_right = 299.2
offset_bottom = 548.2
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Door2" type="ColorRect" parent="Background/Control/Mess_Hall"]
layout_mode = 0
offset_left = 153.0
offset_top = -15.0
offset_right = 162.0
color = Color(0.247059, 0.247059, 0.454902, 1)

[node name="Label" type="Label" parent="Background/Control/Mess_Hall"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Mess Hall"
horizontal_alignment = 1

[node name="Pod" type="ColorRect" parent="Background/Control"]
layout_mode = 0
offset_left = 30.0001
offset_top = 93.0
offset_right = 100.0
offset_bottom = 163.0
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Door7" type="ColorRect" parent="Background/Control/Pod"]
layout_mode = 0
offset_left = 53.5293
offset_top = 69.7059
offset_right = 62.5293
offset_bottom = 84.7059
color = Color(0.247059, 0.247059, 0.454902, 1)

[node name="Label" type="Label" parent="Background/Control/Pod"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Pod"
horizontal_alignment = 1

[node name="Bunks" type="ColorRect" parent="Background/Control"]
layout_mode = 0
offset_left = 173.333
offset_top = 21.6
offset_right = 316.334
offset_bottom = 133.6
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Door4" type="ColorRect" parent="Background/Control/Bunks"]
layout_mode = 0
offset_left = 123.5
offset_top = 111.5
offset_right = 132.5
offset_bottom = 126.5
color = Color(0.247059, 0.247059, 0.454902, 1)

[node name="Label" type="Label" parent="Background/Control/Bunks"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -11.5
offset_right = 24.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Bunks"
horizontal_alignment = 1

[node name="Command_Deck" type="ColorRect" parent="Background/Control"]
layout_mode = 0
offset_left = 885.35
offset_top = 240.05
offset_right = 1002.35
offset_bottom = 346.05
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Door6" type="ColorRect" parent="Background/Control/Command_Deck"]
layout_mode = 0
offset_left = -20.0
offset_top = 49.0
offset_bottom = 58.0
color = Color(0.247059, 0.247059, 0.454902, 1)

[node name="Label" type="Label" parent="Background/Control/Command_Deck"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -24.5
offset_right = 40.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
text = "Command 
Deck"
horizontal_alignment = 1

[node name="Stairs" type="ColorRect" parent="Background/Control"]
layout_mode = 0
offset_left = 447.6
offset_top = 98.6666
offset_right = 598.6
offset_bottom = 165.667
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Door3" type="ColorRect" parent="Background/Control/Stairs"]
layout_mode = 0
offset_left = 13.5
offset_top = 66.5
offset_right = 22.5
offset_bottom = 81.5
color = Color(0.247059, 0.247059, 0.454902, 1)

[node name="Label" type="Label" parent="Background/Control/Stairs"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -11.5
offset_right = 22.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Stairs"
horizontal_alignment = 1

[node name="Research" type="ColorRect" parent="Background/Control"]
layout_mode = 0
offset_left = 506.534
offset_top = 443.2
offset_right = 693.534
offset_bottom = 546.2
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Door" type="ColorRect" parent="Background/Control/Research"]
layout_mode = 0
offset_left = 19.0
offset_top = -15.0
offset_right = 28.0
color = Color(0.247059, 0.247059, 0.454902, 1)

[node name="Label" type="Label" parent="Background/Control/Research"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -11.5
offset_right = 35.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Research"
horizontal_alignment = 1

[node name="Supply" type="ColorRect" parent="Background/Control"]
layout_mode = 0
offset_left = 759.266
offset_top = 106.6
offset_right = 799.266
offset_bottom = 168.6
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Door5" type="ColorRect" parent="Background/Control/Supply"]
layout_mode = 0
offset_left = 15.0
offset_top = 62.0
offset_right = 24.0
offset_bottom = 77.0
color = Color(0.247059, 0.247059, 0.454902, 1)

[node name="Label" type="Label" parent="Background/Control/Supply"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.5
offset_top = -17.5
offset_right = 19.5
offset_bottom = 17.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 11
text = "Supply 
Closet"
horizontal_alignment = 1

[node name="Main_Hall" type="ColorRect" parent="Background/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -14.0
offset_top = 217.5
offset_right = 472.0
offset_bottom = 323.5
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.7, 1.7)
color = Color(0.270588, 0.290196, 0.333333, 1)

[node name="Label" type="Label" parent="Background/Control/Main_Hall"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Main Hall"
horizontal_alignment = 1
